ubiquity (2.3.20) UNRELEASED; urgency=low

  [ Sebastian Heinlein ]
  * Rework oem-config-gtk to use a mainloop (LP: #637517)

  [ Evan Dandrea ]
  * Call gconftool-2 --set with --config-source.

 -- Mario Limonciello <Mario_Limonciello@Dell.com>  Thu, 16 Sep 2010 10:08:25 -0500

ubiquity (2.3.19) maverick; urgency=low

  * Make sure /var/lib/ubiquity/langpacks gets generated (LP: #630924).
  * Fall back to root if the regular user cannot be found in
    ubiquity-dm (LP: #640386).
  * Properly handle dmimodel() returning the null string.
  * Fix bootloader installation test (LP: #640341).
  * Set a the respective timezone, both internally and visually, when an
    entry is selected from the geonames autocompletion.

 -- Evan Dandrea <evand@ubuntu.com>  Thu, 16 Sep 2010 13:22:19 +0100

ubiquity (2.3.18) maverick; urgency=low

  [ Evan Dandrea ]
  * Improve the text on the prepare page, based on input from Matthew
    Paul Thomas, Amanda Brock, and Andrew Sinclair
    (LP: #635269, LP: #635260).
  * Translate latitude and longitude from the Geonames service to its
    respective Olsen timezone database entry.
  * Add back the hostname entry (LP: #628087).
  * Use a block device icon for cases where we cannot detect the
    operating system on a partition.
  * Set the amount of used space on a partition that we presume contains
    no operating system (LP: #626299).
  * Make requiring a password to log in the default again, matching the
    behavior in the previous version of Ubuntu.
  * Use the correct string for the resize partition option.
  * Set the size of the disk on the automatic partitioning page
    (LP: #626299).
  * Use dmidecode to get a more unique suffix for the hostname
    (LP: #628087).
  * Also generate a sample hostname when generating a sample username
    (LP: #634279).
  * Only set the next button to 'Install Now' when not on the first
    partitioning page (LP: #636392).
  * Fix transposed latitude and longitude in geonames lookup.